Fix cards word spacing

--- a/app/components/UI/MarkdownText.scss
+++ b/app/components/UI/MarkdownText.scss
@@ -1,5 +1,7 @@
 .mdyna-md {
-  word-spacing: -2.5px;
+  .hljs {
+    word-spacing: -2.5px;
+  }
 }
 
 .disable-code {
